force-app/main/default/objects/Account/fields/Bundle_From_Scratch_A__c.field-meta.xml
<CustomField>
    <fullName>Bundle_From_Scratch_A__c</fullName>
    <label>Bundle From Scratch A</label>
    <length>18</length>
    <type>Text</type>
</CustomField>