force-app/main/default/objects/Account/fields/Bundle_From_Scratch_B__c.field-meta.xml
<CustomField>
    <fullName>Bundle_From_Scratch_B__c</fullName>
    <label>Bundle From Scratch B</label>
    <length>18</length>
    <type>Text</type>
</CustomField>