force-app/main/default/objects/Account/fields/Pipeline_Testing_1__c.field-meta.xml
<CustomField>
    <fullName>Pipeline_Testing_1__c</fullName>
    <label>Pipeline Testing 1</label>
    <length>18</length>
    <type>Text</type>
</CustomField>