force-app/main/default/objects/Account/fields/Pipeline_Testing_2__c.field-meta.xml
<CustomField>
    <fullName>Pipeline_Testing_2__c</fullName>
    <label>Pipeline Testing 2</label>
    <length>18</length>
    <type>Text</type>
</CustomField>