force-app/main/default/objects/Account/fields/Pipeline_Testing__c.field-meta.xml
<CustomField>
    <fullName>Pipeline_Testing__c</fullName>
    <label>Pipeline Testing</label>
    <length>18</length>
    <type>Text</type>
</CustomField>